--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ gitlab = "0.1505"
 dotenv = "0.15"
 clap = { version = "4", features = ["derive", "env"] }
 serde = { version = "1", features = ["derive"] }
+anyhow = { version = "1", features = ["backtrace"] }
