--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -1,4 +1,8 @@
 pipeline:
+  shellcheck:
+    image: koalaman/shellcheck-alpine
+    commands:
+      - shellcheck ./scripts/*.sh
   check:
     image: rust:1.65
     commands:
