--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-gitlab = "0.1505"
+gitlab = "0.1602" # Actually 16.03
 dotenv = "0.15"
+itertools = "0.11"
+http = "~0.2"
 clap = { version = "4", features = ["derive", "env"] }
 serde = { version = "1", features = ["derive"] }
-anyhow = { version = "1", features = ["backtrace"] }
+serde_json = { version = "1" }
+color-eyre = "0.5"
