--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-gitlab = "0.1602" # Actually 16.03
+gitlab = "=0.1603" # Matches gitlab version
 dotenv = "0.15"
 itertools = "0.11"
 http = "~0.2"
@@ -15,3 +15,4 @@ serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1" }
 color-eyre = "0.5"
 indicatif = "0.17"
+ureq = { version = "2.7", features = ["json"] }
