--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ serde_json = { version = "1" }
 color-eyre = "0.5"
 indicatif = "0.17"
 ureq = { version = "2.7", features = ["json"] }
+csv = "1.2.2"
