--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-gitlab = "=0.1605.1" # Matches git version
+gitlab = { path = "../rust-gitlab" }
 dotenv = "0.15"
 itertools = "0.12"
 http = "0.2"
