--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,13 +7,13 @@ edition = "2021"
 
 [dependencies]
 gitlab = { path = "../rust-gitlab" }
-dotenv = "0.15"
-itertools = "0.12"
+dotenvy = "0.15"
+itertools = "0.13"
 http = "1.1"
 clap = { version = "4", features = ["derive", "env"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1" }
-color-eyre = "0.5"
+color-eyre = "0.6"
 indicatif = "0.17"
 ureq = { version = "2.8", features = ["json"] }
 csv = "1.3"
