--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
-name = "gitlab-helper"
+name = "coursectl"
 version = "0.1.0"
 edition = "2021"
+authors = ["Vivian Roest <vivian@0x76.dev"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
